DDI-Lifecycle/3.3/model/_sources/item-types/ResourcePackage/index.rst.txt
ResourcePackage
---------------

The Resource Package is a specialized structure which is intended to hold reusable metadata outside of the structures of a single StudyUnit or Group. For example this may be common methodological approaches bound in a DataCollection module, DataRelationship information bound in a LogicalProduct, or any maintainable scheme. The ResourcePackage is often used to manage and publish metadata that is used by StudyUnits or Groups by reference. Any maintainable object with the exception of a Group, StudyUnit or LocalHoldingPackage may be published in a Resource Package. Each maintainable object may be entered as either an in-line representation or by reference. Within each maintainable type the ordering of in-line or referenced content may be mixed. In addition the ResourcePackage contains self identifying information including: a citation, abstract, authorization source, a universe reference, series statement, references to applicable quality statements, funding and budget information, purpose, coverage, other material, embargo, and the resource package archive (as opposed to an Archive module intended as the part of the published reusable content).

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "Citation",":doc:`/composite-types/CitationType/index`","0..1","The citation for the ResourcePackage. DDI strongly recommends that at minimum a Title be provided."
   "TypeOfResourcePackage",":doc:`/composite-types/CodeValueType/index`","0..1","A brief description of the resource package type. Supports the use of a controlled vocabulary."
   "Abstract",":doc:`/composite-types/StructuredStringType/index`","0..1","An abstract of the ResourcePackage unit describing the nature and scope of the data collection, special characteristics of its content. Note that detailed information on the purpose of the ResourcePackage and structured coverage information are to be entered in Purpose and Coverage. Supports multiple language versions of the same content as well as optional formatting of the content."
   "AuthorizationSource",":doc:`/composite-types/AuthorizationSourceType/index`","0..n","Identifies the authorizing agency for the ResourcePackage and allows for the full text of the authorization (law, regulation, or other form of authorization). May be used to list authorizations from oversight committees and other regulatory agencies."
   "ApprovalReviewReference",":doc:`/item-types/ApprovalReview/index`","0..1","Provides information about the Approval Review undertaken in relation to the activity. Identifies the organization processing the review, the role of the approval review organization, case number, description, and related dates. Allows the inclusion of a reference to an external source detailing the approval review."
   "DefiningConceptReference",":doc:`/item-types/Concept/index`","0..1","A concept that defines or aids in understanding the content of the resource package."
   "UniverseReference",":doc:`/item-types/Universe/index`","0..1","Reference to the universe statement from the universe scheme, describing the ResourcePackage of persons or other elements that are the object of research and to which any analytic results refer. Age, nationality, and residence commonly help to delineate a given universe, but any of a number of factors may be involved, such as sex, race, income, veteran status, criminal convictions, etc. The universe may consist of elements other than persons, such as housing units, court cases, deaths, countries, etc. In general, it should be possible to tell from the description of the universe whether a given individual or element (hypothetical or real) is a member of the population under ResourcePackage. A universe may be described as ""inclusive"" or ""exclusive"". This ResourcePackage level reference is normally to the top level of the UniverseScheme."
   "SeriesStatement",":doc:`/composite-types/SeriesStatementType/index`","0..n","A ResourcePackage, particularly one in a series, may be the result of two series merging into a single ResourcePackage. The new ResourcePackage belongs to both series. For example, Niger now fields the UNICEF Multiple Indicators Cluster Survey (MICS) and the Demographic and Health Survey as a single merged instrument."
   "InformationClassificationReference",":doc:`/item-types/InformationClassification/index`","0..n","Used to describe the rules and guidelines on how the data is allowed to be handled, transferred, stored and disposed. These confidentiality policies are often dictated by national laws and/or data owners on handling of personal, proprietary, and other sensitive information."
   "QualityStatementReference",":doc:`/item-types/QualityStatement/index`","0..n","A reference to a QualityScheme containing statements of quality related to the quality of the ResourcePackage methodology, metadata, or data. Quality statements may be related to external quality standards."
   "FundingInformation",":doc:`/composite-types/FundingInformationType/index`","0..n","Contains details of the ResourcePackage unit's funding, including information about grants, agencies, etc."
   "ProjectBudget",":doc:`/composite-types/BudgetType/index`","0..n","This describes the overall budget of the ResourcePackage. It can be repeated for distinct budget activities. It contains a structured description and one or more budget documents described by an OtherMaterial type."
   "Purpose",":doc:`/composite-types/StructuredStringType/index`","0..1","The purpose of the ResourcePackage, why the ResourcePackage took place. This should include detailed information on the investigator's primary ResourcePackage questions or hypotheses as well as information on any legal basis for the data collection, such as laws requiring the collection of census data for apportionment purposes. Legal or other authorization should be provided in detail within AuthorizationSource. Supports multiple language versions of the same content as well as optional formatting of the content."
   "Coverage",":doc:`/composite-types/CoverageType/index`","0..1","Describes the coverage of the ResourcePackage unit. Detailed information on Topical, Temporal, and Spatial Coverage is contained here. Note that Coverage at this level should be inclusive all lower level modules or section. Lower level descriptions serve to constrain coverage within the scope described here."
   "Embargo",":doc:`/composite-types/EmbargoType/index`","0..n","Embargo information about the ResourcePackage unit. References to embargo information in this section can be made from individual variables."
   "OtherMaterialSchemeReference",":doc:`/item-types/OtherMaterialScheme/index`","0..n","This scheme contains a set of other materials referenced by the metadata."
   "ResourcePackageArchive",":doc:`/composite-types/ResourcePackageArchiveType/index`","0..n","This is archive information specific to the creation, maintenance, and archiving of the ResourcePackage provided either in-line or by reference. This packaging element differentiates this ""Archive"" from one being published as a product within a ResourcePackage."
   "ConceptualComponentReference",":doc:`/item-types/ConceptualComponent/index`","0..n","Allows for in-line entry of an ConceptualComponent."
   "DataCollectionReference",":doc:`/item-types/DataCollection/index`","0..n","Allows for in-line entry of an DataCollection."
   "LogicalProductReference",":doc:`/item-types/BaseLogicalProduct/index`","0..n","Allows for in-line entry of any LogicalProduct. l:BaseLogicalProduct is a substitution group base."
   "PhysicalDataProductReference",":doc:`/item-types/PhysicalDataProduct/index`","0..n","Allows for in-line entry of an PhysicalDataProduct."
   "PhysicalInstanceReference",":doc:`/item-types/PhysicalInstance/index`","0..n","Allows for in-line entry of an PhysicalInstance."
   "PhysicalInstanceGroupReference",":doc:`/item-types/PhysicalInstanceGroup/index`","0..n","Allows physical instance modules to be grouped with or without hierarchical structure."
   "ArchiveReference",":doc:`/item-types/Archive/index`","0..n","Allows for in-line entry of an Archive."
   "DDIProfileReference",":doc:`/item-types/DDIProfile/index`","0..n","Allows for in-line entry of an DDIProfile."
   "ComparisonReference",":doc:`/item-types/Comparison/index`","0..n","Allows for in-line entry of an Comparison."
   "ClassificationFamilyReference",":doc:`/item-types/ClassificationFamily/index`","0..n","Allows for in-line entry of a Classification Family."
   "ClassificationCorrespondenceTableReference",":doc:`/item-types/ClassificationCorrespondenceTable/index`","0..n","Allows for in-line entry of a Classification Correspondence Table."
   "OrganizationSchemeReference",":doc:`/item-types/OrganizationScheme/index`","0..n","In-line inclusion of a OrganizationScheme."
   "ConceptSchemeReference",":doc:`/item-types/ConceptScheme/index`","0..n","In-line inclusion of a ConceptScheme."
   "UniverseSchemeReference",":doc:`/item-types/UniverseScheme/index`","0..n","In-line inclusion of a UniverseScheme."
   "ConceptualVariableSchemeReference",":doc:`/item-types/ConceptualVariableScheme/index`","0..n","In-line inclusion of a ConceptualVariableScheme."
   "RepresentedVariableSchemeReference",":doc:`/item-types/RepresentedVariableScheme/index`","0..n","In-line inclusion of a RepresentedVariableScheme."
   "GeographicStructureSchemeReference",":doc:`/item-types/GeographicStructureScheme/index`","0..n","In-line inclusion of a GeographicStructureScheme."
   "GeographicLocationSchemeReference",":doc:`/item-types/GeographicLocationScheme/index`","0..n","In-line inclusion of a GeographicLocationScheme."
   "InterviewerInstructionSchemeReference",":doc:`/item-types/InterviewerInstructionScheme/index`","0..n","In-line inclusion of a InterviewerInstructionScheme."
   "ControlConstructSchemeReference",":doc:`/item-types/ControlConstructScheme/index`","0..n","In-line inclusion of a ControlConstructScheme."
   "QuestionSchemeReference",":doc:`/item-types/QuestionScheme/index`","0..n","In-line inclusion of a QuestionScheme."
   "MeasurementSchemeReference",":doc:`/item-types/MeasurementScheme/index`","0..n","In-line inclusion of a MeasurementScheme."
   "CategorySchemeReference",":doc:`/item-types/CategoryScheme/index`","0..n","In-line inclusion of a CategoryScheme."
   "CodeListSchemeReference",":doc:`/item-types/CodeListScheme/index`","0..n","In-line inclusion of a CodeListScheme."
   "NCubeSchemeReference",":doc:`/item-types/NCubeScheme/index`","0..n","In-line inclusion of a NCubeScheme."
   "VariableSchemeReference",":doc:`/item-types/VariableScheme/index`","0..n","In-line inclusion of a VariableScheme."
   "PhysicalStructureSchemeReference",":doc:`/item-types/PhysicalStructureScheme/index`","0..n","In-line inclusion of a PhysicalStructureScheme."
   "RecordLayoutSchemeReference",":doc:`/item-types/RecordLayoutScheme/index`","0..n","In-line inclusion of a RecordLayoutScheme."
   "QualitySchemeReference",":doc:`/item-types/QualityScheme/index`","0..n","In-line inclusion of a QualityScheme."
   "InstrumentSchemeReference",":doc:`/item-types/InstrumentScheme/index`","0..n","In-line inclusion of a InstrumentScheme."
   "ProcessingEventSchemeReference",":doc:`/item-types/ProcessingEventScheme/index`","0..n","In-line inclusion of a ProcessingEventScheme."
   "ProcessingInstructionSchemeReference",":doc:`/item-types/ProcessingInstructionScheme/index`","0..n","In-line inclusion of a ProcessingInstructionScheme."
   "ManagedRepresentationSchemeReference",":doc:`/item-types/ManagedRepresentationScheme/index`","0..n","In-line inclusion of a ManagedRepresentationScheme."
   "UnitTypeSchemeReference",":doc:`/item-types/UnitTypeScheme/index`","0..n","In-line inclusion of a UnitTypeScheme."
   "SamplingInformationSchemeReference",":doc:`/item-types/SamplingInformationScheme/index`","0..n","A set of sample frames maintained by an agency, and used in the instrument."
   "DevelopmentActivitySchemeReference",":doc:`/item-types/DevelopmentActivityScheme/index`","0..n","A set of development activities maintained by an agency, and used in the development, review, or creation of a question, measurement, data capture flow (control construct), or instrument."

Properties Inherited from Maintainable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "Note",":doc:`/composite-types/NoteType/index`","0..n","Note allows for the attachment of a piece of additional information to any object with an ID. Note facilitates capturing temporary processing notes such as ""Review and approval required"". A single note can be attached to multiple objects by reference to the objects. Note may also contain content for a needed object that has been reported for addition in a later version of the schema. Ideally this should be handled by a local extension, but Note can accommodate run-time extensions when required. The Note should be housed within the Maintainable object that contains the referenced objects. In this way the user is ensured of receiving all known Note attachments when the maintainable content is delivered. This means that if a Note references objects within multiple Maintainable objects, the Note should be repeated in each Maintainable and reference only those objects with that Maintainable."
   "Software",":doc:`/composite-types/SoftwareType/index`","0..n","Indicate the software used to create and/or manage the metadata. This is repeatable to allow for multiple softwares or multiple functions. If this information is important it is advisable to provide it in each maintainable so that it does not become separated from the internal content if the metadata is re-factored."
   "MetadataQuality",":doc:`/composite-types/MetadataQualityType/index`","0..n","An assessment of the quality of the metadata within the Maintainable object, e.g. the quality of the transcription, completeness, editing status, etc."
   "ExternalReferenceDefaultURI","anyURI","0..1","Use to provide a default value for the URI of external references. Use of a URI in a reference within this maintainable overrides the value entered here. Nested maintainables should redeclare the contents of this attribute for clarity."
   "Lang","language","0..1","This is used to designate the language of the metadata content of the maintainable. If a lower level xml:lang attribute conflicts with the content at the maintainable level, the object level value takes precedence."

Properties Inherited from Versionable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "UserAttributePair",":doc:`/composite-types/StandardKeyValuePairType/index`","0..n","A system specific user defined property of the object expressed as a key/value pair. As this is specific to an individual system the use of controlled vocabularies for the key is strongly recommended."
   "VersionResponsibility","string","0..1","Person or organization within the MaintenanceAgency responsible for the version change. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, it may be included in this notation. This is primarily intended for internal use."
   "VersionResponsibilityReference",":doc:`/item-types/Agent/index`","0..1","Reference person or organization within the MaintenanceAgency responsible for the version change, as described in an OrganizationScheme. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, a Relation should be created between the individual referenced here and his/her organization. This is primarily intended for internal use."
   "VersionRationale",":doc:`/composite-types/VersionRationaleType/index`","0..1","Textual description of the rationale/purpose for the version change and a coded value to provide an internal processing flag within and organization or system. Note that versioning can only take place on objects owned by the specified DDI Agency. If you are creating a local instance of an object from another agency for current or future modification use BasedOnObject. If the changes being made result in what you determine to be new object rather than a version of a previous object, i.e. the change is too extensive to consider it a version of the existing object, create a new object and use BasedOnObject to provide a link to the object or objects that were a basis for the new object."
   "BasedOnObject",":doc:`/composite-types/BasedOnObjectType/index`","0..1","Use when creating an object that is based on an existing object or objects that are managed by a different agency or when the new object is NOT simply a version change but you wish to maintain a reference to the object that served as a basis for the new object. BasedOnObject may contain references to any number of objects which serve as a basis for this object, a BasedOnRationalDescription of how the content of the referenced object was incorporated or altered, and a BasedOnRationalCode to allow for specific typing of the BasedOnReference according to an external controlled vocabulary."
   "RelatedOtherMaterialReference",":doc:`/item-types/OtherMaterial/index`","0..n","The inclusion of an existing OtherMaterial by reference. Use for any type of OtherMaterial not specifically addressed by an inline description for such as ExternalAid in QuestionItem."
   "VersionDate","cogsDate","0..1","Date of version using the union set BaseDateType. Duration should not be used in this field, even though allowed by the ISO format enforced by the parser."
   "IsPublished","boolean","0..1","Indicates that the maintainable will not be changed without versioning, and is a stable target for referencing."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/item-types/Versionable/index`
    * :doc:`/item-types/Maintainable/index`
        * **ResourcePackage**


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/DDIInstance/index`
* :doc:`/item-types/LocalHoldingPackage/index`
* :doc:`/composite-types/LocalAddedContentType/index`
* :doc:`/composite-types/RequiredResourcePackagesType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/ResourcePackage.svg

